QQmlProperty: handle reads of QQmlPropertyMap correctly

Fixes: QTBUG-79614
Change-Id: Iaf84c0178dc88072a367da2b42b09554b85c7d57
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>